---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 18. 08. 2024.
  Changes:
    - Improve line layout
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 17. 08. 2024.
  Changes:
    - Add a checkbox to show input products on the graph - Ctrl-Click on a product to open the recipe list
    - Improve automatic layout when selection change (in graph settings)
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 16. 08. 2024.
  Bugfixes:
    - Fix crash on migration
    - Fix display on select all recipes
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 14. 08. 2024.
  Changes:
    - Add command to set layer to used products (involved in production), you can choose layed display to hide other recipes and also recompute layout
    - Add graph setting to set line gap (gap between two adjacent lines)
    - Improve drawing
    - Add new graphic layout computations in settings, based on a tree whose roots are the targeted products (non zero value in production panel)
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 02. 07. 2024.
  Changes:
    - Shift left click on a product (in the product panel) will set the layer of all recipe using this product (to find which recipe use a product)
    - Add a setting to prefer machines in player inventory
    - Change layer display to keep position when switching with selection display
    - Add beacon modules preferences
    - Improve link drawing
  Bugfixes:
    - Fix module selection
    - Fix crash when production failed
    - Fix history on recipe selection
    - Fix layer management
---------------------------------------------------------------------------------------------------